--- a/index.html
+++ b/index.html
@@ -49,21 +49,24 @@
                 <div class="teams-img">
                     <img class="team-img" src="images/team1.png" alt="">
                 </div>
-                <div class="team-img">
+                <div class="teams-img">
                     <img class="team-img" src="images/team2.png" alt="">
                 </div>
-                <div class="team-img">
+                <div class="teams-img">
                     <img class="team-img" src="images/team3.png" alt="">
                 </div>
-                <div class="team-img">
+                <div class="teams-img">
                     <img class="team-img" src="images/team4.png" alt="">
                 </div>
             </div>
 
             <div class="team-content">
-                <h2><span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span class="span-features">Features</span></h2>
+                <h2><span class="quick-list">Quick list</span> <span class="of-our">of Our</span> <span
+                        class="span-features">Features</span></h2>
 
-                <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="team-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
 
                 <button class="btn-primary">Explore More</button>
             </div>
@@ -72,12 +75,119 @@
 
         </div>
 
-         
+        <!-- Features section -->
+
+        <div class="features-section">
+
+            <div class="features-content-container">
+                <h2 class="features-container-heading">Features you will <br> love & enjoy</h2>
+                <p class="features-container-description">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even</p>
+
+
+                <div class="features-card">
+                    <h3 class="features-card-heading">Dexktop & Mobile Version</h3>
+                    <p class="features-card-description">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by injected humour, or
+                        randomised...........</p>
+                </div>
+
+                <div class="features-card">
+                    <h3 class="features-card-heading">Drag & Drop Builder</h3>
+                    <p class="features-card-description">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by injected humour, or
+                        randomised...........</p>
+                </div>
+
+                <div class="features-card">
+                    <h3 class="features-card-heading">Awesome Modern Design</h3>
+                    <p class="features-card-description">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by injected humour, or
+                        randomised...........</p>
+                </div>
+
+                <div class="features-card">
+                    <h3 class="features-card-heading">Super Easy to Edit</h3>
+                    <p class="features-card-description">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration in some form, by injected humour, or
+                        randomised...........</p>
+                </div>
+
+            </div>
+
+            <div class="features-img-container">
+                <img class="features-img" src="images/architect.png" alt="">
+                <button class="btn-primary" id="year10">
+                    <span class="year-10">10+Year</span> <br>
+                    Experience
+                </button>
+            </div>
+
+
+
+        </div>
+
+        <!-- Facts section -->
+
+        <div class="fact-section">
+            <div class="fact-text-container">
+                <h2 class="fact-heading">Some facts</h2>
+                <p class="fact-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration.</p>
+            </div>
+
+            <div class="fact-card-container">
+
+                <div class="fact-card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="fact-card-number">54</h3>
+                    <p class="fact-card-title">Awards Winnings</p>
+                </div>
+
+                <div class="fact-card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="fact-card-number">1458</h3>
+                    <p class="fact-card-title">Project Finished</p>
+                </div>
+
+                <div class="fact-card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="fact-card-number">590</h3>
+                    <p class="fact-card-title">Clients Worked</p>
+                </div>
+
+                <div class="fact-card">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="fact-card-number">22578</h3>
+                    <p class="fact-card-title">Email Send</p>
+                </div> 
+
+            </div>
+        </div>
+
+        <!-- Sponspors section -->
+
+            <div class="sponspors-content">
+                <h2 class="sponspors-heading">Our Sponspors</h2>
+                <p class="sponspors-description">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                </p>
+            </div>
+
+            <div class="sponspors-company">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+
     </main>
 
 
     <footer class="footer">
-
+        <p id="footer-content" class="sponspors-description">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 
 
